[package]
name = "fjson"
version = "0.2.1"
authors = ["Ryan Fowler"]
edition = "2021"
description = "A library for parsing and formatting json with C-style comments and trailing commas"
repository = "https://github.com/ryanfowler/fjson"
license = "MIT"
keywords = ["json", "jsonc", "hjson", "format", "decode"]
categories = ["compilers", "development-tools", "encoding", "parsing"]

[dependencies]
arrayvec = { version = "0.7.2" }

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
