[package]
name = "fjson-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = { version = "1.0.91", features = ["preserve_order"] }

[dependencies.fjson]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "jsonc"
path = "fuzz_targets/jsonc.rs"
test = false
doc = false

[[bin]]
name = "json"
path = "fuzz_targets/json.rs"
test = false
doc = false

[[bin]]
name = "scanner"
path = "fuzz_targets/scanner.rs"
test = false
doc = false
